
- New class :class:`rpy2.rinterface_lib._rinterface_capi.UninitializedRCapsule`
  to allow the instanciation of "placeholder" rpy2 objects before the
  embedded R is initialized. This facilitate the use of static typing checks
  such as mypy, mocking for tests that do not involve the execution of R
  code, and allow cleaner implementations of module-level globals
  that are R objects.


Changes
-------

- When calling R C-API's `R_ParseVector` and a error occurs, the
  exception message now contains the parsing status.

- :mod:`rpy2.rinterface_lib.embedded` has a module-level "constant"
  `DEFAULT_C_STACK_LIMIT` used when initializing the embedded R.

- When creating a :mod:`rpy2.robjects.vectors.DataFrame` from (name, vector)
  pairs, the names are no longer transformed to syntactically valid R
  symbols (issue #660).

Bugs fixed
-----------

- Building ABI only mode could require an API build environment (and fail
  with an error when not present).
  
- SVG output for the R magic were incorrectly bytes objects.


Release 3.2.7
=============

Bugs fixed
----------

- An f-string in `_rinterface_cffi_build.py` prevented installation
  on Python 3.5 (issue #654).


Release 3.2.6
=============

Bugs fixed
----------

- The conversion of date/time object with specified timezones
  was wrong when different than the local time zone (issue #634)

- Iterating over :mod:`rpy2.situation.iter_info()` could result
  in a error because of a typo in the code.

Changes
-------

- :mod:`pandas` 1.0.0 breaks the conversion layer. A warning
  is now emitted whenever trying to use `pandas` >= 1.0.


Release 3.2.5
=============

Bugs fixed
----------

- Latest release for R package `rlang` broke import through `importr()`.
  A workaround for :mod:`rpy2.robjects.lib.ggplot2` is to rename the
  offending R object (issue #631).

Changes
-------

- f-string requiring Python >= 3.6 removed.


Release 3.2.4
=============

Bugs fixed
----------
